# algorithms_toolkit

./: .gitignore  .pre-commit-config.yaml  O.md  README.md  __init__.py  app.py  learning.txt  main2.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
advanced/: __init__.py  approximation.py  linear_programming.py
dp/: __init__.py  classic.py  sequence.py
examples/: advanced_examples.py  dp_examples.py  geometry_examples.py  graph_examples.py  main.py  sorting_searching_examples.py  string_examples.py  tree_examples.py
geometry/: __init__.py  basic.py  comparison.py  convex_hull.py  intersection.py
graph/: __init__.py  base.py  bipartite.py  coloring.py  connectivity.py  flow.py  mst.py  shortest_path.py  traversal.py
kosmos/: README.md  visualisation.js
kosmos/advanced/: __init__.py  linear_programming.py
kosmos/api/: routes.py  schemas.py
kosmos/core/: algorithm.py  event_bus.py  registry.py  state_manager.py
kosmos/crypto/: basic_algorithms.py
randomized/: randomized_algorithms.py
reinforcement/: basic_rl.py
searching/: __init__.py  binary.py
sorting/: __init__.py  linear.py
string/: __init__.py  aho_corasick.py  compression.py  palindrome.py  pattern_matching.py  sequence.py  suffix.py
strings/: __init__.py  aho_corasick.py  compression.py  pattern_matching.py  sequence.py
tree/: __init__.py  base.py  fenwick_tree.py  lru_cache.py  properties.py  segment_tree.py  traversal.py  trie.py
utils/: asset_bundler.py  matplotlib_adapter.py  performance.py  visualization.py
web/: app.py
(+81 files in other folders)
