[tool.poetry]
name = "algorithms_toolkit"
version = "0.1.0"
description = ""
authors = ["valentyn <valikminak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
ipython = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
