[tool.poetry]
name = "algorithms_toolkit"
version = "0.1.0"
description = ""
authors = ["valentyn <valikminak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
ipython = "^9.0.2"
pre-commit = "^4.2.0"
autoflake = "^2.3.1"
networkx = "^3.4.2"
flask-cors = "^5.0.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
pydantic = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
